--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -36,7 +36,7 @@ agent any
 steps{
 echo 'Packaging worker app with docker'
 script{
-docker.withRegistry('https://index.docker.io/v1/','dockerlogin') {
+docker.withRegistry('https://index.docker.io/v1/','docker-login') {
 def workerImage = docker.build("swidiws/worker:v${env.BUILD_ID}", "./worker")
 workerImage.push()
 workerImage.push("latest")
