Update .env for e2e
Signed-off-by: wsomat <63158131+wsomat@users.noreply.github.com>

--- a/e2e/.env
+++ b/e2e/.env
@@ -1,3 +1,3 @@
-VOTE_IMAGE=xxxxx/vote:latest
-WORKER_IMAGE=xxxxx/worker:latest
-RESULT_IMAGE=xxxxx/result:latest
+VOTE_IMAGE=swidiws/vote:latest
+WORKER_IMAGE=swidiws/worker:latest
+RESULT_IMAGE=swidiws/result:latest
